fix nginx conf for compose

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,12 @@ http{
 
   server {
     listen 80;
-    location /raj {
+    location /success {
       proxy_pass http://docker-web/success;
+    }
+
+    location / {
+      proxy_pass http://docker-web;
     }
   }
 }
